tests/fixtures/invalid/none_mul_int.py
# Cannot multiply None and Int
x: None = None * 1
